# mdbook-search-chinese

./: Cargo.toml  README.md
src/: config.rs  lib.rs  main.rs  processor.rs  search.rs
src/theme/: mod.rs
src/theme/searcher/: mod.rs  searcher.js  zh.js
