[package]
name = "mdbook-search-chinese"
version = "0.1.0"
authors = ["blazh <blazh@163.com>"]
edition = "2018"
keywords = ["mdbook","search", "chinese"]
readme = "README.md"
repository = "https://github.com/rust-lang/mdBook"
description = "mdbook processor support search with chinese"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.28"
chrono = "0.4"
clap = "2.24"
env_logger = "0.7.1"
# handlebars = "3.0"
lazy_static = "1.0"
log = "0.4"
pulldown-cmark = "0.7.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
mdbook="0.4.7"
elasticlunr-rs = { version = "2.3"}
ammonia = { version = "3"}
toml = "0.5.1"
toml_edit = "0.2.0"